# pulse

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  CONTRIBUTING.md  COST_OPTIMIZED_DEPLOY.md  DEPLOYMENT_FIX_NEEDED.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_MINIMAL.md  DEPLOY_NOW.md  DEPLOY_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_PREREQUISITES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  build_checklist.json  docker-compose.dev.yml  docker-compose.prod.yml  instructions.txt.txt  package.json  test_aws_infrastructure.py  test_project_structure.py  turbo.json
.husky/: commit-msg
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: .gitkeep
apps/backend/scripts/: seed_data.py
apps/backend/src/: __init__.py  main.py
apps/backend/src/api/v1/: __init__.py  auth.py  cv.py  files.py  payments.py  plans.py  slides.py  usage.py
apps/backend/src/core/: __init__.py  config.py  db.py  dependencies.py  logging.py  security.py
apps/backend/src/models/: __init__.py  file.py  job.py  payment.py  plan.py  usage.py  user.py
apps/backend/src/schemas/: auth.py  cv.py  files.py  payments.py  plans.py  slides.py  usage.py
apps/backend/src/services/: cv_docx.py  emails.py  files.py  slides_pptx.py
apps/backend/src/services/payments/: __init__.py  base.py  hyperpay.py  paytabs.py  zaincash.py
apps/gateway/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/gateway/src/: __init__.py  main.py
apps/gateway/src/core/: config.py  logging.py  moderation.py  provider_router.py
apps/gateway/src/middleware/: rate_limit.py  usage_meter.py
apps/gateway/src/models/: __init__.py  usage_log.py
apps/gateway/src/providers/: anthropic_client.py  google_client.py  nano_banana_stub.py  openai_client.py  replicate_client.py  veo3_stub.py
apps/gateway/src/routes/: __init__.py  chat.py  images.py  video.py
apps/gateway/src/schemas/: __init__.py  chat.py  images.py  video.py
apps/worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/worker/src/: __init__.py  main.py
apps/worker/src/jobs/: analytics.py  cleanup.py  payments_webhooks.py  video_finalize.py
docker/: backend.Dockerfile  frontend.Dockerfile  gateway.Dockerfile  worker.Dockerfile
docs/: ACTIVITY.md  API.md  API_CONTRACTS.md  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  MARKETING_PLAYBOOK.md  RUNBOOK.md  (+1 more)
(+199 files in other folders)
