[tool.poetry]
name = "pulse-ai-gateway"
version = "0.1.0"
description = "AI Gateway for Pulse AI Studio"
authors = ["Pulse AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
httpx = "^0.25.0"
openai = "^1.3.0"
anthropic = "^0.7.0"
google-generativeai = "^0.3.0"
redis = "^5.0.0"
boto3 = "^1.29.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.10.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

