[tool.poetry]
name = "pulse-ai-worker"
version = "0.1.0"
description = "Async Worker for Pulse AI Studio"
authors = ["Pulse AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
boto3 = "^1.29.0"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.10.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

